Add .md file to index

--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
         - dubExecute: steps/dubExecute.md
         - durationMeasure: steps/durationMeasure.md
         - fortifyExecuteScan: steps/fortifyExecuteScan.md
+        - gatlingExecuteTests: steps/gatlingExecuteTests.md
         - gaugeExecuteTests: steps/gaugeExecuteTests.md
         - gctsCloneRepository: steps/gctsCloneRepository.md
         - gctsCreateRepository: steps/gctsCreateRepository.md
