--- a/resources/metadata/abapEnvironmentCreateSystem.yaml
+++ b/resources/metadata/abapEnvironmentCreateSystem.yaml
@@ -2,7 +2,7 @@ metadata:
   name: abapEnvironmentCreateSystem
   description: Creates a SAP Cloud Platform ABAP Environment system (aka Steampunk system)
   longDescription: |
-    creates a SAP Cloud Platform ABAP Environment system (aka Steampunk system)
+    This step creates a SAP Cloud Platform ABAP Environment system (aka Steampunk system) via the cloud foundry command line interface (cf CLI). This can be done by providing a service manifest as a configuration file (parameter `serviceManifest`) or by passing the configuration values directly via the other parameters of this step.
 
 spec:
   inputs:
@@ -128,7 +128,7 @@ spec:
         aliases:
           - name: cloudFoundry/serviceManifest
           - name: cfServiceManifest
-      - name: adminEmail
+      - name: abapSystemAdminEmail
         type: string
         description: Admin E-Mail address for the initial administrator of the system
         scope:
