Default stash for gatlingExecuteTests

--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -234,6 +234,9 @@ steps:
       - 'invalid'
       - 'question'
       - 'wontfix'
+  gatlingExecuteTests:
+    stashContent:
+      - 'source'
   gaugeExecuteTests:
     buildTool: 'maven'
     dockerEnvVars:
