--- a/resources/metadata/hadolint.yaml
+++ b/resources/metadata/hadolint.yaml
@@ -1,5 +1,5 @@
 metadata:
-  name: hadolintExecuteScan
+  name: hadolintExecute
   description: Executes the Haskell Dockerfile Linter which is a smarter Dockerfile linter that helps you build [best practice](https://docs.docker.com/develop/develop-images/dockerfile_best-practices/) Docker images.
   longDescription: |-
     Executes the Haskell Dockerfile Linter which is a smarter Dockerfile linter that helps you build [best practice](https://docs.docker.com/develop/develop-images/dockerfile_best-practices/) Docker images.
