--- a/resources/metadata/kaniko.yaml
+++ b/resources/metadata/kaniko.yaml
@@ -97,6 +97,11 @@ spec:
         resourceRef:
           - name: dockerConfigJsonCredentialsId
             type: secret
+          - type: vaultSecretFile
+            paths:
+              - $(vaultPath)/docker-config
+              - $(vaultBasePath)/$(vaultPipelineName)/docker-config
+              - $(vaultBasePath)/GROUP-SECRETS/docker-config
       - name: dockerfilePath
         aliases:
           - name: dockerfile
