--- a/resources/metadata/kubernetesdeploy.yaml
+++ b/resources/metadata/kubernetesdeploy.yaml
@@ -225,6 +225,11 @@ spec:
         resourceRef:
           - name: kubeConfigFileCredentialsId
             type: secret
+          - type: vaultSecretFile
+            paths:
+            - $(vaultPath)/kube-config
+            - $(vaultBasePath)/$(vaultPipelineName)/kube-config
+            - $(vaultBasePath)/GROUP-SECRETS/kube-config
       - name: kubeContext
         type: string
         description: Defines the context to use from the \"kubeconfig\" file.
