--- a/resources/metadata/hadolint.yaml
+++ b/resources/metadata/hadolint.yaml
@@ -72,21 +72,23 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-        default: null
-        conditions:
-          - conditionRef: strings-equal
-            params:
-              - name: null
-                value: null
+        default: "[[threshold: 1, type: 'TOTAL_ERROR', unstable: false]]"
       - name: reportFile
         type: string
         description: Name of the result file used locally within the step.
-        mandatory: false
         scope:
           - PARAMETERS
           - STAGES
           - STEPS
         default: hadolint.xml
+      - name: reportName
+        type: string
+        description: Name of the checkstyle report used locally within the step.
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: HaDoLint
   containers:
     - name: hadolint
       image: hadolint/hadolint:latest-debian
