Check also valid for new stages

--- a/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
@@ -113,7 +113,7 @@ parameterTypeChanged:
   appUrls:
     oldType: "String"
     newType: "List"
-    stages: ["productionDeployment", "endToEndTests"]
+    stages: ["productionDeployment", "endToEndTests", "Release", "Acceptance"]
 
 renamedNpmScript:
   ci-integration-test:
