--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -70,6 +70,9 @@ stages:
       neoDeploy:
         configKeys:
           - 'neo/account'
+      tmsUpload:
+        configKeys:
+          - nodeName
       healthExecuteCheck:
         configKeys:
           - 'testServerUrl'
