--- a/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
@@ -54,6 +54,10 @@ removedOrReplacedSteps:
     customMessage: "The createHdiContainer step is no longer available.
       If you still need the functionalities provided by this step, please open an issue at: https://github.com/SAP/cloud-s4-sdk-pipeline/issues/new?template=pipeline-issue.md
       Apart from that it is also possible to implement an extension for the stage 'Integration' using the extensibility concept explained in the documentation: https://sap.github.io/jenkins-library/extensibility/"
+  checkJMeter:
+    customMessage: "The checkJMeter step is no longer available.
+      If you still need the functionalities provided by this step, please open an issue at: https://github.com/SAP/cloud-s4-sdk-pipeline/issues/new?template=pipeline-issue.md
+      Apart from that it is also possible to implement an extension for the stage 'Performance' using the extensibility concept explained in the documentation: https://sap.github.io/jenkins-library/extensibility/"
 
 removedOrReplacedStages:
   integrationTests:
