--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -269,12 +269,12 @@ steps:
       runCommand: 'bundle install && bundle exec gauge run'
       testOptions: 'specs'
   hadolintExecute:
-    reportFile: hadolint.xml
-    reportName: HaDoLint
     qualityGates:
       - threshold: 1
         type: 'TOTAL_ERROR'
         unstable: false
+    reportFile: 'hadolint.xml'
+    reportName: 'HaDoLint'
     stashContent:
       - 'buildDescriptor'
   handlePipelineStepErrors:
