--- a/resources/metadata/kubernetesdeploy.yaml
+++ b/resources/metadata/kubernetesdeploy.yaml
@@ -213,6 +213,15 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
+      - name: keepFailedDeployments
+        type: bool
+        description: Defines whether a failed deployment will be purged
+        default: true
+        scope:
+          - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
       - name: kubeConfig
         type: string
         description: Defines the path to the \"kubeconfig\" file.
