removed image placeholder from fortify step

--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -531,8 +531,7 @@ spec:
           - STEPS
         default: false
   containers:
-    - image: "<<please bring your own fortify image>>"
-      workingDir: "/home/piper"
+    - image: ""
   outputs:
     resources:
       - name: influx
