--- a/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml
@@ -37,6 +37,12 @@ removedOrReplacedConfigKeys:
     postAction: true
     customMessage: "Details can be found in the release notes of v43 of the Cloud SDK Pipeline: https://github.com/SAP/cloud-s4-sdk-pipeline/releases/tag/v43"
 
+requiredConfigKeys:
+  inferBuildTool:
+    general: true
+    customMessage: "Please specify 'inferBuildTool: true' in the general section of your .pipeline/config.yml file.
+        This will activate a number of features previously activated by the Cloud SDK Pipeline's default configuration."
+
 removedOrReplacedSteps:
   executeMaven:
     newStepName: "mavenExecute"
@@ -54,6 +60,12 @@ removedOrReplacedSteps:
     customMessage: "The createHdiContainer step is no longer available.
       If you still need the functionalities provided by this step, please open an issue at: https://github.com/SAP/cloud-s4-sdk-pipeline/issues/new?template=pipeline-issue.md
       Apart from that it is also possible to implement an extension for the stage 'Integration' using the extensibility concept explained in the documentation: https://sap.github.io/jenkins-library/extensibility/"
+  checkJMeter:
+    customMessage: "The checkJMeter step is no longer available.
+      If you still need the functionalities provided by this step, please open an issue at: https://github.com/SAP/cloud-s4-sdk-pipeline/issues/new?template=pipeline-issue.md
+      Apart from that it is also possible to implement an extension for the stage 'Performance' using the extensibility concept explained in the documentation: https://sap.github.io/jenkins-library/extensibility/"
+  checkGatling:
+    newStepName: "gatlingExecuteTests"
 
 removedOrReplacedStages:
   integrationTests:
