Run Promote stage if nexusUpload is configured
In Cloud SD KPipeline and General Purpose Pipeline

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -111,6 +111,14 @@ stages:
       artifactDeployment:
         configKeys:
           - 'nexus'
+  promote:
+    stepConditions:
+      nexusUpload:
+        configKeys:
+          - 'url'
+      promote:
+        configKeys:
+          - 'nexus'
   postPipelineHook:
     stepConditions:
       postPipelineHook:
