--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -63,6 +63,9 @@ stages:
       containerPushToRegistry:
         configKeys:
           - 'dockerRegistryUrl'
+      nexusUpload:
+        configKeys:
+          - 'url'
   Release:
     stepConditions:
       multicloudDeploy:
