Add mavenExecuteIntegration, mavenExecuteStaticCodeChecks, npmExecuteLint and npmExecuteScripts to piperPipelineStagePRVoting

--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -8,6 +8,11 @@ stages:
     stepConditions:
       sonarExecuteScan:
         filePattern: '**/sonar-project.properties'
+      mavenExecuteIntegration:
+        filePattern: 'integration-tests/pom.xml'
+      npmExecuteScripts:
+        npmScripts:
+          - 'ci-frontend-unit-test'
   Build:
     stepConditions:
       sonarExecuteScan:
