--- a/resources/metadata/nexusUpload.yaml
+++ b/resources/metadata/nexusUpload.yaml
@@ -132,6 +132,8 @@ spec:
     resources:
       - name: buildDescriptor
         type: stash
+      - name: buildResult
+        type: stash
   containers:
     # To allow both maven and mta we require an image that contains both tools. If the user configures an image for mavenExecute that also needs to contain both.
     - name: mvn-npm
