Run nexusUpload in stage Promote (#2349)

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -111,6 +111,9 @@ stages:
       artifactDeployment:
         configKeys:
           - 'nexus'
+      nexusUpload:
+        configKeys:
+          - 'url'
   postPipelineHook:
     stepConditions:
       postPipelineHook:
