--- a/resources/metadata/nexusUpload.yaml
+++ b/resources/metadata/nexusUpload.yaml
@@ -39,7 +39,6 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-        mandatory: false
         default: nexus3
         possibleValues:
           - nexus2
@@ -130,6 +129,11 @@ spec:
           - name: nexusCredentialsId
             type: secret
             param: password
+    resources:
+      - name: buildDescriptor
+        type: stash
+      - name: buildResult
+        type: stash
   containers:
     # To allow both maven and mta we require an image that contains both tools. If the user configures an image for mavenExecute that also needs to contain both.
     - name: mvn-npm
