--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -11,8 +11,8 @@ stages:
       mavenExecuteIntegration:
         filePattern: 'integration-tests/pom.xml'
       npmExecuteScripts:
-        npmScripts:
-          - 'ci-frontend-unit-test'
+        configKeys:
+          - 'runScripts'
   Build:
     stepConditions:
       sonarExecuteScan:
