--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -23,6 +23,9 @@ stages:
         filePattern: '**/*.bats'
       karmaExecuteTests:
         filePattern: '**/karma.conf.js'
+      npmExecuteScripts:
+        npmScripts:
+          - 'ci-frontend-unit-test'
   Integration: {}
   Acceptance:
     stepConditions:
