Check for "runScripts" key instead of script

--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -24,8 +24,8 @@ stages:
       karmaExecuteTests:
         filePattern: '**/karma.conf.js'
       npmExecuteScripts:
-        npmScripts:
-          - 'ci-frontend-unit-test'
+        configKeys:
+          - 'runScripts'
   Integration: {}
   Acceptance:
     stepConditions:
