Add runStep conditions for mavenExecuteIntegration and npmExecuteScripts in Integration stage

--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -26,7 +26,13 @@ stages:
       npmExecuteScripts:
         configKeys:
           - 'runScripts'
-  Integration: {}
+  Integration:
+    stepConditions:
+      npmExecuteScripts:
+        configKeys:
+          - 'runScripts'
+      mavenExecuteIntegration:
+        filePattern: 'integration-tests/pom.xml'
   Acceptance:
     stepConditions:
       multicloudDeploy:
