Use stashSettings.yml instead

--- a/resources/com.sap.piper/pipeline/stashSettings.yml
+++ b/resources/com.sap.piper/pipeline/stashSettings.yml
@@ -15,6 +15,12 @@ Build:
   - source
   stashes: []
 
+Integration:
+  unstash:
+  - source
+  - buildResult
+  stashes: []
+
 Acceptance:
   unstash:
   - buildResult
