Add deployment to performance tests stage and enable stage

--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -64,7 +64,12 @@ stages:
           - 'userTokenCredentialsId'
           - 'whitesource/userTokenCredentialsId'
           - 'whitesourceUserTokenCredentialsId'
-  Performance: {}
+  Performance:
+    stepConditions:
+      gatlingExecuteTests:
+        filePatternFromConfig: 'pomPath'
+        configKeys:
+          - 'appUrls'
   Compliance: {}
   Promote:
     stepConditions:
