--- a/resources/com.sap.piper/pipeline/stageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/stageDefaults.yml
@@ -72,6 +72,10 @@ stages:
           - 'whitesourceUserTokenCredentialsId'
   Performance:
     stepConditions:
+      multicloudDeploy:
+        configKeys:
+          - 'cfTargets'
+          - 'neoTargets'
       gatlingExecuteTests:
         filePatternFromConfig: 'pomPath'
         configKeys:
