--- a/resources/com.sap.piper/pipeline/stashSettings.yml
+++ b/resources/com.sap.piper/pipeline/stashSettings.yml
@@ -27,6 +27,12 @@ Acceptance:
   - deployDescriptor
   stashes: []
 
+Performance:
+  unstash:
+    - source
+    - buildResult
+  stashes: []
+
 Release:
   unstash:
   - buildResult
