--- a/resources/metadata/abapEnvironmentCreateSystem.yaml
+++ b/resources/metadata/abapEnvironmentCreateSystem.yaml
@@ -179,6 +179,46 @@ spec:
           - STAGES
           - STEPS
           - GENERAL
+      - name: abapSystemParentServiceLabel
+        description: The name of the parent service label that is passed through to CLD
+        type: string
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
+      - name: abapSystemParentServiceInstanceGuid
+        description: The guid/Service ID of the parent service
+        type: string
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
+      - name: abapSystemParentSaasAppname
+        description: The parent appname from the SaaS registry
+        type: string
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
+      - name: abapSystemParentServiceParameters
+        description: JSON string that contains the service parameters of the parent service passed through CLD
+        type: string
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
+      - name: abapSystemConsumerTenantLimit
+        description: Specifies how many tenants can be created/onboarded in the system
+        type: int
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
       - name: addonDescriptorFileName
         description: The file name of the addonDescriptor
         type: string
