--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -35,6 +35,61 @@ plugins:
       # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md013---line-length
       MD013:
         enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md#md033---inline-html
+      MD033:
+        enabled: false
+      # TODO: fix in separate PR
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md001
+      MD001:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md004
+      MD004:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md012
+      MD012:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md007
+      MD007:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md022
+      MD022:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md024
+      MD024:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md026
+      MD026:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md030
+      MD030:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md031
+      MD031:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md032
+      MD032:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md036
+      MD036:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md038
+      MD038:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md039
+      MD039:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md040
+      MD040:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md042
+      MD042:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md041
+      MD041:
+        enabled: false
+      # https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md046
+      MD046:
+        enabled: false
   shellcheck:
     enabled: true
 exclude_patterns:
