--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -7,7 +7,7 @@ MD033: false #no-inline-html
 # TODO: fix in separate PR
 MD001: false #heading-increment/header-increment
 MD004: false #ul-style
-MD012: false #no-multiple-blanks
+# MD012: false #no-multiple-blanks
 MD007: false #ul-indent
 MD022: false #blanks-around-headings/blanks-around-headers
 MD024: false #no-duplicate-heading/no-duplicate-header
