--- a/resources/metadata/mtaBuild.yaml
+++ b/resources/metadata/mtaBuild.yaml
@@ -142,7 +142,7 @@ spec:
         params:
           - name: mtarFilePath
   containers:
-    - image: devxci/mbtci:1.0.16.1
+    - image: docker.pkg.github.com/sap/cloud-mta-build-tool/mbtci:1.0.16
       conditions:
         - conditionRef: strings-equal
           params:
