--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
         - 'Overview': infrastructure/overview.md
         - 'Custom Jenkins Setup': infrastructure/customjenkins.md
         - 'Vault For Pipline Secrets': infrastructure/vault.md
+        - 'Fixing docker rate limit': infrastructure/docker-rate-limit.md
     - 'Pipelines':
         - 'ABAP Environment pipeline':
             - 'Introduction': pipelines/abapEnvironment/introduction.md
