--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -171,7 +171,7 @@ steps:
           high: '0'
       qualityGates:
         - threshold: 1
-          type: 'TOTAL_HIGH'
+          type: 'TOTAL_ERROR'
           unstable: false
     eslint:
       pattern: '**/eslint.xml'
