--- a/consumer-test/testCases/s4sdk/consumer-test-neo.yml
+++ b/consumer-test/testCases/s4sdk/consumer-test-neo.yml
@@ -1,7 +1,7 @@
 # Test case configuration
 referenceAppRepo:
   url: "https://github.com/piper-validation/cloud-s4-sdk-book"
-  branch: "consumer-test-neo"
+  branch: "consumer-test-neo-gpp"
 deployCredentialEnv:
   username: "CX_INFRA_IT_CF_USERNAME"
   password: "CX_INFRA_IT_CF_PASSWORD"
