--- a/resources/metadata/abapEnvironmentCreateSystem.yaml
+++ b/resources/metadata/abapEnvironmentCreateSystem.yaml
@@ -40,9 +40,9 @@ spec:
             param: username
           - type: vaultSecret
             paths:
-              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
-              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
-              - $(vaultBasePath)/GROUP-SECRETS/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(org)-$(space)
+              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(org)-$(space)
+              - $(vaultBasePath)/GROUP-SECRETS/cloudfoundry-$(org)-$(space)
       - name: password
         type: string
         description: Password for Cloud Foundry User
@@ -58,9 +58,9 @@ spec:
             param: password
           - type: vaultSecret
             paths:
-              - $(vaultPath)/cloudfoundry-$(cfOrg)-$(cfSpace)
-              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(cfOrg)-$(cfSpace)
-              - $(vaultBasePath)/GROUP-SECRETS/cloudfoundry-$(cfOrg)-$(cfSpace)
+              - $(vaultPath)/cloudfoundry-$(org)-$(space)
+              - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(org)-$(space)
+              - $(vaultBasePath)/GROUP-SECRETS/cloudfoundry-$(org)-$(space)
       - name: cfOrg
         type: string
         description: Cloud Foundry org
