--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -110,6 +110,7 @@ steps:
       - 'tests'
     testPackage: 'piper-bats'
   checksPublishResults:
+    failOnError: false
     tasks:
       pattern: '**/*.java'
       low: ''
