--- a/resources/metadata/checkmarx.yaml
+++ b/resources/metadata/checkmarx.yaml
@@ -31,6 +31,22 @@ spec:
           - STAGES
           - STEPS
         default: true
+      - name: clientId
+        type: string
+        description: The client_id of the Checkmarx OIDC client
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: "resource_owner_client"
+      - name: clientSecret
+        type: string
+        description: The client_secret of the Checkmarx OIDC client
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: "014DF517-39D1-4453-B7B3-9930C563627C"
       - name: filterPattern
         type: string
         description: The filter pattern used to zip the files relevant for scanning, patterns can be negated by setting an exclamation mark in front i.e. `!test/*.js` would avoid adding any javascript files located in the test directory
