--- a/resources/metadata/protecode.yaml
+++ b/resources/metadata/protecode.yaml
@@ -174,6 +174,11 @@ spec:
           - name: protecodeCredentialsId
             type: secret
             param: username
+          - type: vaultSecret
+            paths:
+              - $(vaultPath)/protecode
+              - $(vaultBasePath)/$(vaultPipelineName)/protecode
+              - $(vaultBasePath)/GROUP-SECRETS/protecode
       - name: password
         type: string
         description: Password which is used for the user
@@ -187,6 +192,11 @@ spec:
           - name: protecodeCredentialsId
             type: secret
             param: password
+          - type: vaultSecret
+            paths:
+              - $(vaultPath)/protecode
+              - $(vaultBasePath)/$(vaultPipelineName)/protecode
+              - $(vaultBasePath)/GROUP-SECRETS/protecode
       - name: artifactVersion
         type: string
         description: The version of the artifact to allow identification in protecode backend
