feature(vault) retrieve github token from Vault

--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -59,6 +59,11 @@ spec:
         resourceRef:
           - name: githubTokenCredentialsId
             type: secret
+          - type: vaultSecret
+            paths:
+            - $(vaultPath)/github
+            - $(vaultBasePath)/$(vaultPipelineName)/github
+            - $(vaultBasePath)/GROUP-SECRETS/github
       - name: autoCreate
         type: bool
         description:
