--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -92,6 +92,7 @@ nav:
         - gctsRollback: steps/gctsRollback.md
         - githubCheckBranchProtection: steps/githubCheckBranchProtection.md
         - githubCommentIssue: steps/githubCommentIssue.md
+        - githubCreateIssue: steps/githubCreateIssue.md
         - githubCreatePullRequest: steps/githubCreatePullRequest.md
         - githubPublishRelease: steps/githubPublishRelease.md
         - githubSetCommitStatus: steps/githubSetCommitStatus.md
