--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -73,6 +73,6 @@ spec:
           name: dev-shm
       env:
         - name: "NO_PROXY"
-          value: "localhost,karma,$NO_PROXY"
+          value: "localhost,selenium,$NO_PROXY"
         - name: "no_proxy"
           value: "localhost,selenium,$no_proxy"
